--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 streamlit
 yfinance
-numpy
 pandas
-pandas_ta
+numpy
 plotly
 scikit-learn
-tensorflow-cpu
+tensorflow
 vaderSentiment
-pip install feedparser
+feedparser
